--- a/Lucky28/Lucky28/JWBettingTableViewCell.xib
+++ b/Lucky28/Lucky28/JWBettingTableViewCell.xib
@@ -605,20 +605,21 @@
                     <constraint firstItem="z1r-Wl-T6X" firstAttribute="top" secondItem="hzn-af-08V" secondAttribute="bottom" constant="8" id="2wd-AT-0jZ"/>
                     <constraint firstItem="xLx-o0-8an" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="3LR-Ak-fGb"/>
                     <constraint firstItem="hPU-DG-sFQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.75" id="3eP-3A-qfh"/>
-                    <constraint firstItem="FJD-TE-YnQ" firstAttribute="top" secondItem="0HI-dy-QW7" secondAttribute="bottom" constant="8" id="3zF-lu-4XJ"/>
                     <constraint firstItem="hPU-DG-sFQ" firstAttribute="top" secondItem="z3u-fg-2h7" secondAttribute="bottom" constant="8" id="45I-Dq-A9d"/>
+                    <constraint firstItem="7Tw-9U-xQt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="83" id="4Hg-9W-qd8"/>
                     <constraint firstItem="uCt-ma-Cmp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="51k-eg-U75"/>
                     <constraint firstItem="vdj-xq-nUm" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="52e-nm-9Te"/>
                     <constraint firstItem="UJ5-Tn-pu9" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.37" id="53i-Mb-Qat"/>
                     <constraint firstItem="jNi-iG-Pgc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="5QI-h3-P8q"/>
                     <constraint firstItem="2qd-ye-cLa" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="5U9-xP-vZn"/>
                     <constraint firstItem="HIP-ed-bNB" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="61X-pt-Ndc"/>
-                    <constraint firstItem="cmZ-1C-MyB" firstAttribute="top" secondItem="HIP-ed-bNB" secondAttribute="bottom" constant="8" id="6bz-Ja-gXM"/>
+                    <constraint firstItem="FJD-TE-YnQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="151" id="6tt-AY-FtC"/>
                     <constraint firstItem="z3u-fg-2h7" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.75" id="7fj-Ip-gW5"/>
                     <constraint firstAttribute="trailing" secondItem="6ra-z6-DyS" secondAttribute="trailing" id="8ws-Hn-UbS"/>
                     <constraint firstItem="Vzg-Kb-H8K" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.75" id="9GW-lL-GG8"/>
                     <constraint firstItem="HRQ-kc-K0Y" firstAttribute="top" secondItem="Zd1-7u-Jyf" secondAttribute="bottom" constant="8" id="9c8-VY-k1c"/>
                     <constraint firstItem="xb1-Lh-9SU" firstAttribute="top" secondItem="uCt-ma-Cmp" secondAttribute="bottom" constant="8" id="9hP-nZ-SD6"/>
+                    <constraint firstItem="e8p-QL-SVj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="83" id="DPK-sN-oe2"/>
                     <constraint firstItem="FTt-yq-aQI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="E0U-X9-mG2"/>
                     <constraint firstItem="dkt-gp-2rt" firstAttribute="top" secondItem="jNi-iG-Pgc" secondAttribute="bottom" constant="8" id="E2N-Vm-igv"/>
                     <constraint firstItem="eIv-Dg-XYs" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="E8t-zh-Ftg"/>
@@ -630,6 +631,7 @@
                     <constraint firstItem="h6Q-YQ-LE1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="Gve-Xe-lCe"/>
                     <constraint firstItem="YR2-6w-BAY" firstAttribute="top" secondItem="vSz-MQ-wxr" secondAttribute="bottom" constant="8" id="HSQ-B8-V0M"/>
                     <constraint firstItem="uCt-ma-Cmp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="HlH-PJ-LHn"/>
+                    <constraint firstItem="P1e-tL-LvU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="151" id="HzC-y5-eAM"/>
                     <constraint firstItem="6ra-z6-DyS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IAZ-np-frD"/>
                     <constraint firstItem="dkt-gp-2rt" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="IHY-FQ-upn"/>
                     <constraint firstItem="JpY-2R-t3s" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="IUm-il-JKv"/>
@@ -638,8 +640,10 @@
                     <constraint firstItem="cmZ-1C-MyB" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Jyp-fg-Ari"/>
                     <constraint firstItem="Zd1-7u-Jyf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.75" id="KCt-t1-Mpp"/>
                     <constraint firstItem="fjJ-lw-8HA" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="KRB-cQ-qBV"/>
+                    <constraint firstItem="uUE-O5-DXy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="83" id="KTP-fA-mZn"/>
                     <constraint firstItem="P1e-tL-LvU" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.75" id="KWF-JJ-IN8"/>
                     <constraint firstItem="wyn-P6-0o6" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Kt3-1S-VAi"/>
+                    <constraint firstItem="0lJ-sF-uQf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="83" id="LAN-YA-P0l"/>
                     <constraint firstItem="1hv-dQ-39V" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="LF6-Sm-us6"/>
                     <constraint firstItem="uUE-O5-DXy" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="LFT-0a-6UE"/>
                     <constraint firstItem="vqy-Jt-Ngg" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="LJD-3f-cwr"/>
@@ -650,6 +654,7 @@
                     <constraint firstItem="Zd1-7u-Jyf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="OFm-Bm-eZN"/>
                     <constraint firstItem="z0h-fV-M3T" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="OxM-V8-K2e"/>
                     <constraint firstItem="FQ5-xa-mhY" firstAttribute="top" secondItem="z0h-fV-M3T" secondAttribute="bottom" constant="8" id="PhY-DI-vB6"/>
+                    <constraint firstItem="xVQ-jr-OxE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="151" id="Q2g-aK-AGb"/>
                     <constraint firstItem="Ko2-6j-7dt" firstAttribute="top" secondItem="e8p-QL-SVj" secondAttribute="bottom" constant="8" id="Qjq-5Z-37A"/>
                     <constraint firstItem="Ybv-xy-Xzn" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="ROi-KX-ylh"/>
                     <constraint firstItem="Qz5-0g-71d" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="Rgb-ZK-4c9"/>
@@ -658,27 +663,24 @@
                     <constraint firstItem="ikB-4P-6pi" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="S2s-1T-RKT"/>
                     <constraint firstItem="JpY-2R-t3s" firstAttribute="top" secondItem="cmZ-1C-MyB" secondAttribute="bottom" constant="8" id="T6c-dW-H84"/>
                     <constraint firstItem="sdw-1c-bkO" firstAttribute="top" secondItem="vqy-Jt-Ngg" secondAttribute="bottom" constant="8" id="TDa-p3-KXR"/>
+                    <constraint firstItem="vSz-MQ-wxr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="151" id="TcR-nK-pJ2"/>
                     <constraint firstItem="vqy-Jt-Ngg" firstAttribute="top" secondItem="wyn-P6-0o6" secondAttribute="bottom" constant="8" id="Tz5-S0-wnb"/>
                     <constraint firstItem="8Q4-Wy-Vu4" firstAttribute="top" secondItem="FQ5-xa-mhY" secondAttribute="bottom" constant="8" id="URG-Hx-fWf"/>
+                    <constraint firstItem="AMp-qS-4hL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="83" id="Usg-1N-vWE"/>
                     <constraint firstItem="wyn-P6-0o6" firstAttribute="top" secondItem="72a-r8-9eq" secondAttribute="bottom" constant="8" id="VD4-Ow-sj5"/>
                     <constraint firstItem="FJD-TE-YnQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="VXS-VZ-Rgb"/>
                     <constraint firstAttribute="trailing" secondItem="FTt-yq-aQI" secondAttribute="trailing" id="VgF-1i-50v"/>
                     <constraint firstItem="72a-r8-9eq" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="WW8-ax-lpf"/>
-                    <constraint firstItem="P1e-tL-LvU" firstAttribute="top" secondItem="b26-oL-mNq" secondAttribute="bottom" constant="8" id="WfZ-lh-mzE"/>
                     <constraint firstItem="hzn-af-08V" firstAttribute="top" secondItem="FJD-TE-YnQ" secondAttribute="bottom" constant="8" id="Wrm-qb-KSF"/>
-                    <constraint firstItem="vSz-MQ-wxr" firstAttribute="top" secondItem="qRj-gi-YQk" secondAttribute="bottom" constant="8" id="Wwd-O9-Xxn"/>
                     <constraint firstItem="Vzg-Kb-H8K" firstAttribute="top" secondItem="zjH-J2-bqo" secondAttribute="bottom" constant="8" id="XBw-hK-ndC"/>
                     <constraint firstItem="UJ5-Tn-pu9" firstAttribute="top" secondItem="Ybv-xy-Xzn" secondAttribute="bottom" constant="8" id="XYz-X5-rNz"/>
                     <constraint firstItem="xb1-Lh-9SU" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="Xcd-Hd-foP"/>
                     <constraint firstItem="fsF-bc-Oly" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="YSe-ZS-McJ"/>
                     <constraint firstItem="VXX-2M-NVL" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="YVk-w8-MHR"/>
-                    <constraint firstItem="xVQ-jr-OxE" firstAttribute="top" secondItem="Ko2-6j-7dt" secondAttribute="bottom" constant="8" id="Yzf-nS-awC"/>
                     <constraint firstItem="6ra-z6-DyS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Z2w-q1-47z"/>
                     <constraint firstItem="sdw-1c-bkO" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="a0C-Go-x4x"/>
                     <constraint firstItem="zjH-J2-bqo" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.75" id="aIR-Oj-3Vj"/>
-                    <constraint firstItem="e8p-QL-SVj" firstAttribute="top" secondItem="JsW-TJ-hLJ" secondAttribute="bottom" constant="8" id="aeh-IT-hfz"/>
                     <constraint firstItem="qRj-gi-YQk" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="ajb-Da-QXB"/>
-                    <constraint firstItem="AMp-qS-4hL" firstAttribute="top" secondItem="HRQ-kc-K0Y" secondAttribute="bottom" constant="8" id="b2Y-4e-SAb"/>
                     <constraint firstItem="h5D-5c-YsO" firstAttribute="top" secondItem="ql7-Z4-r3n" secondAttribute="bottom" constant="8" id="bBv-nO-PgN"/>
                     <constraint firstItem="G2c-4M-1eh" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="cgD-NP-IYt"/>
                     <constraint firstItem="xLx-o0-8an" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="d9k-Vw-Mfc"/>
@@ -690,10 +692,8 @@
                     <constraint firstItem="zjH-J2-bqo" firstAttribute="top" secondItem="DpX-6g-6dz" secondAttribute="bottom" constant="8" id="gPa-qd-jIJ"/>
                     <constraint firstItem="jNi-iG-Pgc" firstAttribute="top" secondItem="xVQ-jr-OxE" secondAttribute="bottom" constant="8" id="gRd-Lp-fb5"/>
                     <constraint firstItem="xVQ-jr-OxE" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.625" id="gf4-T3-q2I"/>
-                    <constraint firstItem="FJD-TE-YnQ" firstAttribute="top" secondItem="0HI-dy-QW7" secondAttribute="bottom" constant="8" id="gfc-cc-pwy"/>
                     <constraint firstItem="0sB-DT-8T3" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="j0U-Ib-6xu"/>
                     <constraint firstItem="VoD-GK-l0y" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="kQm-8o-yd6"/>
-                    <constraint firstItem="uUE-O5-DXy" firstAttribute="top" secondItem="xb1-Lh-9SU" secondAttribute="bottom" constant="8" id="kVf-xp-e5s"/>
                     <constraint firstItem="0HI-dy-QW7" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="keB-i2-H1h"/>
                     <constraint firstItem="YR2-6w-BAY" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="kj7-yR-LAD"/>
                     <constraint firstItem="hzn-af-08V" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.375" id="lch-Le-4mS"/>
@@ -702,11 +702,8 @@
                     <constraint firstItem="b26-oL-mNq" firstAttribute="top" secondItem="AMp-qS-4hL" secondAttribute="bottom" constant="8" id="o4P-AF-Xdg"/>
                     <constraint firstItem="7Tw-9U-xQt" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.25" id="oPB-yK-e6t"/>
                     <constraint firstItem="G2c-4M-1eh" firstAttribute="top" secondItem="eIv-Dg-XYs" secondAttribute="bottom" constant="8" id="oW9-UT-rO9"/>
-                    <constraint firstItem="cmZ-1C-MyB" firstAttribute="top" secondItem="HIP-ed-bNB" secondAttribute="bottom" constant="8" id="pJg-uu-dtu"/>
-                    <constraint firstItem="7Tw-9U-xQt" firstAttribute="top" secondItem="ikB-4P-6pi" secondAttribute="bottom" constant="8" id="plL-2Q-4N8"/>
                     <constraint firstItem="fsF-bc-Oly" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qR3-nT-bkn"/>
                     <constraint firstItem="qRj-gi-YQk" firstAttribute="top" secondItem="7Tw-9U-xQt" secondAttribute="bottom" constant="8" id="qX2-3F-yeg"/>
-                    <constraint firstItem="0lJ-sF-uQf" firstAttribute="top" secondItem="0sB-DT-8T3" secondAttribute="bottom" constant="8" id="s2g-ea-GXl"/>
                     <constraint firstItem="FTt-yq-aQI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="szM-8n-FUd"/>
                     <constraint firstItem="DpX-6g-6dz" firstAttribute="top" secondItem="P1e-tL-LvU" secondAttribute="bottom" constant="8" id="tCZ-55-Gft"/>
                     <constraint firstItem="Ybv-xy-Xzn" firstAttribute="top" secondItem="2qd-ye-cLa" secondAttribute="bottom" constant="8" id="tL0-kL-OKY"/>
@@ -718,6 +715,7 @@
                     <constraint firstItem="h5D-5c-YsO" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="wm3-xi-56A"/>
                     <constraint firstItem="vdj-xq-nUm" firstAttribute="top" secondItem="dkt-gp-2rt" secondAttribute="bottom" constant="8" id="yFn-Ur-xH4"/>
                     <constraint firstItem="VoD-GK-l0y" firstAttribute="top" secondItem="G2c-4M-1eh" secondAttribute="bottom" constant="8" id="yy4-40-8KW"/>
+                    <constraint firstItem="cmZ-1C-MyB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="151" id="zSh-rp-8Mk"/>
                     <constraint firstItem="eIv-Dg-XYs" firstAttribute="top" secondItem="YR2-6w-BAY" secondAttribute="bottom" constant="8" id="zkP-Kj-yu4"/>
                 </constraints>
             </tableViewCellContentView>
